V 2.2: Added Angular code changes for ws and api
2.2.1 proxy configuration done and working.
2.2.2 websocket configuration done and working
2.2.3 initial bootstrap, routing added.
2.2.4 web socket, shockJS, API configured and working.

--- a/AngularUI/webchat/angular.json
+++ b/AngularUI/webchat/angular.json
@@ -74,6 +74,10 @@
               "browserTarget": "webchat:build:development"
             }
           },
+          "options": {
+            "browserTarget": "webchat:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
