--- a/AngularUI/webchat/package.json
+++ b/AngularUI/webchat/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.3.2",
+    "keycloak-angular": "^10.0.2",
+    "keycloak-js": "^18.0.1",
     "net": "^1.0.2",
     "rxjs": "~7.5.0",
     "sockjs-client": "^1.6.1",
